--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,12 +123,9 @@ services:
 
   traefik:
     image: traefik:v3.0
-    container_name: traefik
-    restart: unless-stopped
+    <<: *common-keys
     security_opt:
       - no-new-privileges:true
-    networks:
-      - proxy
     ports:
       - 80:80
       - 443:443
@@ -137,9 +134,9 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./data/traefik.yml:/traefik.yml:ro
-      - ./data/acme.json:/acme.json
-      - ./data/config.yml:/config.yml:ro
+      - ./appdata/traefik/traefik.yml:/traefik.yml:ro
+      - ./appdata/traefik/.json:/acme.json
+      - ./appdata/traefik/config.yml:/config.yml:ro
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
