--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 x-common-keys: &common-keys
   restart: unless-stopped
   networks:
@@ -134,8 +133,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./appdata/traefik/traefik.yml:/traefik.yml:ro
-      - ./appdata/traefik/.json:/acme.json
+      - ./appdata/traefik/traefik.yaml:/traefik.yml:ro
+      - ./appdata/traefik/acme.json:/acme.json
       - ./appdata/traefik/config.yml:/config.yml:ro
     labels:
       - "traefik.enable=true"
