--- a/appdata/prometheus/alert.rules.yaml
+++ b/appdata/prometheus/alert.rules.yaml
@@ -30,7 +30,7 @@ groups:
       summary: "Instance {{ $labels.instance }} down"
       description: "CPU is over 95% usage for more than 10 mins"  
       
-  - alert: cpu_overused
+  - alert: temp_too_high
     expr: avg_over_time(node_hwmon_temp_celsius[5m]) > 70
     for: 600s
     labels:
