--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--log.level=debug'
       - '--storage.path=/alertmanager'
+    environment:
+      TELEGRAM_BOT_TOKEN: "${$MONITORING_ALERTING_TELEGRAM_BOT_TOKEN}"
 
   blackbox:
     image: prom/blackbox-exporter:v0.23.0
