--- a/appdata/alertmanager/config.yml
+++ b/appdata/alertmanager/config.yml
@@ -6,7 +6,7 @@ route:
 receivers:
   - name: 'telegram-receiver'
     telegram_configs:
-    - bot_token: 6423828770:AAEX_BtDtPb_1QlxfZP7dsoyfYk543FpXc4
+    - bot_token: '{{ .Env.TELEGRAM_BOT_TOKEN }}'
       send_resolved: true
       api_url: https://api.telegram.org
       chat_id: 377375680
