fix: removed traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ x-common-keys: &common-keys
   restart: unless-stopped
   networks:
     - monitoring-services
+    - ${TRAEFIK_PROXY_NETWORK}
   deploy:
     resources:
       limits:
@@ -120,37 +121,6 @@ services:
     volumes:
       - ./appdata/mikrotikexporter:/home/mktxp/mktxp:rw
     user: root
-
-  traefik:
-    image: traefik:v3.0
-    <<: *common-keys
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - 80:80
-      - 443:443
-    environment:
-      CF_DNS_API_TOKEN: ${MONITORING_TRAEFIK_CLOUDFLARE_API_TOKEN} 
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./appdata/traefik/traefik.yaml:/etc/traefik/traefik.yml:ro
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`${MONITORING_TRAEFIK_DASHBOARD_DOMAIN}`)"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users=${MONITORING_TRAEFIK_DASHBOARD_BASE64_CREDENTIALS}"
-      - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
-      - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
-      - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`${MONITORING_TRAEFIK_DASHBOARD_DOMAIN}`)"
-      - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
-      - "traefik.http.routers.traefik-secure.tls=true"
-      - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].main=${MONITORING_HOME_NETWORK_TLD}"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${MONITORING_HOME_NETWORK_TLD}"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
 
 networks:
   monitoring-services:
